--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   ],
   "headers": [
     {
-      "src": "/api/(.*)",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
