chore: update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,7 @@
   ],
   "headers": [
     {
+      "source": "./app.js",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
