--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,9 @@
           "use": "@vercel/node"
       }
   ],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "/app.js"
-      }
-  ],
   "headers": [
     {
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
