--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "http-errors": "^2.0.0",
     "iron-session": "^6.1.3",
     "morgan": "^1.10.0"
