--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@prisma/client": "^4.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "http-errors": "^2.0.0",
     "iron-session": "^6.1.3",
+    "jwt-simple": "^0.5.6",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
