--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "http-errors": "^2.0.0",
     "iron-session": "^6.1.3",
     "jwt-simple": "^0.5.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
